- Remove refine_cell() methods from CellTypes
- Enable marker refinement to work in parallel for 1D meshes too
1.6.0 [2015-07-28]
- Remove redundant pressure boundary condition in Stokes demos
- Require Point in RectangleMesh and BoxMesh constructors
- Remove BinaryFile (TimeSeries now requires HDF5)
- Add (highly experimental) support for Tpetra matrices and
	vectors from Trilinos, interfacing to Belos, Amesos2, IfPack2 and
	Muelu.
- Enable (highly experimental) support for Quadrilateral and Hexahedral meshes,
	including some I/O, but no assembly yet.
- Enable UMFPACK and CHOLMOD solvers with Eigen backend
- Add an MPI_Comm to logger, currently defaulted to MPI_COMM_WORLD
	allowing better control over output in parallel
- Experimental output of quadratic geometry in XDMF files,
	allows more exact visualisation of P2 Functions
- Remove GenericMatrix::compressed (see Issue #61)
- Deprecate and PETScKryloveSolver::set_nullspace() and add
	PETScMatrix::set_nullspace()
- Remove uBLAS backend
- Remove UmfpackLUSolver and CholmodSolver
- Add EigenMatrix/Vector::data()
- Remove GenericMatrix/Vector::data() and GenericMatrix/Vector::data()
	(to use backends that support data(), cast first to backend type, e.g.
	A = A.as_backend_type()
- Remove cmake.local, replaced by fenics-install-component.sh
- Make interior facet integrals define - and + cells ordered by cell_domains
	value.
- Remove deprecated arguments *_domains from assemble() and Form().
- Change measure definition notation from dx[mesh_function] to
	dx(subdomain_data=mesh_function).
- Set locale to "C" before reading from file
- Change GenericDofMap::cell_dofs return type from const std::vector<..>&
	to ArrayView<const ..>
- Add ArrayView class for views into arrays
- Change fall back linear algebra backend to Eigen
- Add Eigen linear algebra backend
- Remove deprecated GenericDofMap::geometric_dim function (fixes Issue #443)
- Add quadrature rules for multimesh/cut-cell integration up to order 6