@@ -60,6 +60,10 @@ namespace dolfin
     void create_entities(boost::multi_array<unsigned int, 2>& e,
                          std::size_t dim, const unsigned int* v) const;
 
+    /// Regular refinement of cell
+    void refine_cell(Cell& cell, MeshEditor& editor,
+                     std::size_t& current_cell) const;
+
     /// Compute volume of tetrahedron
     double volume(const MeshEntity& tetrahedron) const;
 
