@@ -57,6 +57,10 @@ namespace dolfin
                          std::size_t dim,
                          const unsigned int* v) const;
 
+    /// Refine cell uniformly
+    void refine_cell(Cell& cell, MeshEditor& editor,
+                     std::size_t& current_cell) const;
+
     /// Compute (generalized) volume (area) of triangle
     double volume(const MeshEntity& triangle) const;
 
