@@ -1,4 +1,6 @@
-- Remove refine_cell() methods from CellTypes
+- Better quality refinement in 2D in Plaza algorithm, by choosing refinement
+	pattern based on max/min edge ratio
+- Deprecate refine_cell() method in CellTypes
 - Enable marker refinement to work in parallel for 1D meshes too
 1.6.0 [2015-07-28]
 - Remove redundant pressure boundary condition in Stokes demos
